--- a/app.html
+++ b/app.html
@@ -431,7 +431,7 @@
         });
         
         window.addEventListener('offline', () => {
-            console.log('Connection is lost');
+            console.log('Connection lost');
             showErrorScreen();
         });
     </script>
